test/libsolidity/syntaxTests/abstract/abstract_without_contract.sol
abstract A { }
// ----
// ParserError: (9-10): Expected keyword "contract", "interface" or "library".
